# savr

./: .gitignore  Makefile.am  README.md  configure.ac  version_abi.sh  version_api.sh
savr-bin/: Makefile.am
savr-bin/src/: main.c  savr-bin.c
savr-docs/: Makefile.am
savr-docs/source/: conf.py  index.rst
savr-lib/: Makefile.am  Makefile.common.am  savr.pc.in
savr-lib/include/savr/: io.h  platform.h  ringbuffer.h  savr.h  savr.h.in  spi.h  uart.h
savr-lib/include/savr/platform/: atmega2560.h  atmega328.h
savr-lib/platform/: Makefile.am  generate-platform-header.sh  generate-platform-source.sh
savr-lib/platform/atmega2560/: Makefile.am  atmega2560.pinout.txt
savr-lib/platform/atmega328/: Makefile.am  atmega328.pinout  atmega328.pinout.txt
savr-lib/src/: io.c  ringbuffer.c  savr.c  spi.c  uart.c
savr-tests/: Makefile.am  test-compiler.sh.in  test.h  test_dummy.c  test_ringbuffer.c
scripts/: rebuild_from_scratch.sh
